--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.0.1"
 license-file = "LICENSE"
 authors = ["Afonso Bordado <afonsobordado@az8.co>"]
 readme = "README"
+build = "build.rs"
 
 [dependencies]
+
+[build-dependencies]
+rusty-cheddar = "0.3.0"
 
 [lib]
 name = "dbgp"
