--- a/.travis.yml
+++ b/.travis.yml
@@ -30,15 +30,15 @@ matrix:
       rust: stable
 
 script:
-  - cd dbgp && cargo build --verbose
-  - cd dbgp && cargo test --verbose
-  - cd dbgp && cargo doc --verbose
-  - cd dbgp_capi && cargo build --verbose
-  - cd dbgp_capi && cargo test --verbose
-  - cd dbgp_capi && cargo doc --verbose
+  - (cd dbgp && cargo build --verbose)
+  - (cd dbgp && cargo test --verbose)
+  - (cd dbgp && cargo doc --verbose)
+  - (cd dbgp_capi && cargo build --verbose)
+  - (cd dbgp_capi && cargo test --verbose)
+  - (cd dbgp_capi && cargo doc --verbose)
 
 after_success:
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
         cargo install cargo-travis &&
-        cargo coveralls;
+        (cd dbgp && cargo coveralls);
     fi
