--- a/dbgp/Cargo.toml
+++ b/dbgp/Cargo.toml
@@ -7,9 +7,11 @@ version = "0.0.1"
 
 [dependencies]
 base64 = "0.4.1"
+bytes = "0.4.1"
 futures = "0.1.12"
-tokio-core = "0.1.6"
 tokio-io = "0.1.1"
+tokio-proto = "0.1.1"
+tokio-service = "0.1.0"
 url = "1.4.0"
 xml-rs = "0.4.1"
 
