--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,5 @@ script:
 after_success:
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
         cargo install cargo-travis &&
-        (cd dbgp && cargo coveralls) &&
-        (cd dbgp_capi && cargo coveralls);
+        (cd dbgp && cargo coveralls);
     fi
