--- a/dbgp/Cargo.toml
+++ b/dbgp/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.0.1"
 base64 = "0.4.1"
 bytes = "0.4.1"
 futures = "0.1.12"
+lazy_static = "0.2.6"
 tokio-io = "0.1.1"
 tokio-proto = "0.1.1"
 tokio-service = "0.1.0"
