--- a/dbgp_capi/Cargo.toml
+++ b/dbgp_capi/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Afonso Bordado <afonsobordado@az8.co>"]
 license-file = "LICENSE"
 readme = "README.md"
 
+publish = false
 repository = "https://github.com/afonso360/dbgp"
 
 build = "build.rs"
