--- a/dbgp/Cargo.toml
+++ b/dbgp/Cargo.toml
@@ -30,6 +30,7 @@ bytes = "0.4.1"
 futures = "0.1.12"
 lazy_static = "0.2.6"
 tokio-io = "0.1.1"
+tokio-core = "0.1.6"
 tokio-proto = "0.1.1"
 tokio-service = "0.1.0"
 url = "1.4.0"
