--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ os:
   - osx
 rust:
   - nightly
-  #- beta
-  #- stable
+  - beta
+  - stable
 
 addons:
   apt:
@@ -24,15 +24,12 @@ matrix:
   fast_finish: true
 
 script:
-  - (cd dbgp && cargo build --verbose)
-  - (cd dbgp && cargo test --verbose)
-  - (cd dbgp && cargo doc --verbose)
-  - (cd dbgp_capi && cargo build --verbose)
-  - (cd dbgp_capi && cargo test --verbose)
-  - (cd dbgp_capi && cargo doc --verbose)
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo doc --verbose
 
 after_success:
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
         cargo install cargo-travis &&
-        (cd dbgp && cargo coveralls);
+        cargo coveralls;
     fi
