--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: rust
 sudo: false
 
+cache: cargo
 os:
   - linux
   - osx
@@ -11,25 +12,37 @@ rust:
 
 addons:
   apt:
+    sources:
+      # Kcov dependencies
+      - kalakris-cmake
     packages:
+      # Kcov dependencies
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
       - binutils-dev
       - cmake
-    sources:
-      - kalakris-cmake
 
 matrix:
   fast_finish: true
 
+env:
+  - CARGO_FLAGS=""
+
+
+before_script:
+  - export PATH="$PATH:$HOME/.cargo/bin"
+  - which cargo-coverage || cargo install cargo-travis
+  - which rustfmt || cargo install rustfmt
+
 script:
-  - cargo build --verbose
-  - cargo test --verbose
-  - cargo doc --verbose
+  - cargo build --verbose $CARGO_FLAGS
+  - cargo test --verbose $CARGO_FLAGS
+  - cargo doc --verbose $CARGO_FLAGS
+  - cargo fmt -- --write-mode=diff
+
 
 after_success:
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
-        cargo install cargo-travis &&
-        cargo coveralls;
+        cargo coveralls $CARGO_FLAGS;
     fi
