--- a/.travis.yml
+++ b/.travis.yml
@@ -35,14 +35,16 @@ before_script:
   - which cargo-coverage || cargo install cargo-travis
   - which rustfmt || cargo install rustfmt
 
+
 script:
   - cargo build --verbose $CARGO_FLAGS
   - cargo test --verbose $CARGO_FLAGS
+  - cargo bench --verbose $CARGO_FLAGS
   - cargo doc --verbose $CARGO_FLAGS
-  - cargo fmt -- --write-mode=diff
 
 
 after_success:
+  - cargo fmt -- --write-mode=diff
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
         cargo coveralls $CARGO_FLAGS;
     fi
