Make backtrace optional but default

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ include = [
     "README.md",
 ]
 
+[features]
+default = ["backtrace"]
+
+backtrace = ["error-chain/backtrace"]
 
 [dependencies]
 base64 = "0.9"
