--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ url_serde = "0.2"
 
 serde = "1.0"
 serde_derive = "1.0"
-serde-xml-rs = "0.2"
+serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
 
 [dependencies.error-chain]
 version = "0.11"
